fixed investment var and right aligned numbers

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -8,3 +8,11 @@
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
+.price {
+  text-align: right;
+}
+
+.card {
+  margin-bottom: 5px !important;
+}
